# checkmate

./: .dockerignore  .env.example  .gitignore  CheckMate_BuildPlan.md  Dockerfile  LICENSE  Makefile  README.md  REPO_STRUCTURE.md  docker-compose.yml  download_yolo_model.py  forgeshield_build_plan.md  generate_ai_report.py  implementation_plan.md  install.ps1  pyproject.toml  requirements.txt  test.py
_review/: ABOUT.md  install.sh
backend/: fusion.py  ingestion.py  main.py  pyproject.toml  requirements.txt
backend/ai_investigator/: __init__.py  config.py  llm_client.py  prompt_builder.py  reasoning.py
backend/api/: __init__.py  dependencies.py  middleware.py
backend/core/: config.py  database.py  exceptions.py  logger.py  models.py  redis_client.py  security.py  storage.py
backend/cross_analysis/: __init__.py  historical_comparator.py  institution_verifier.py  registry_client.py  seal_validator.py
backend/ela_forgery/: __init__.py  cli.py  ela.py  ghost.py
backend/fusion/: __init__.py  engine.py  risk_tier.py  weights.py
backend/ingestion/: __init__.py  engine.py  ocr.py  qr_extractor.py
backend/pattern_detection/: __init__.py  campaign_detector.py  fingerprint.py
backend/pipelines/: __init__.py  crossdoc.py  ela.py  metadata.py  (+1 more)
checkmate-cli/: package-lock.json  package.json  tsconfig.json
checkmate_cli/: __init__.py  __main__.py  api.py  app.py  config.py  shell.py  theme.py
docs/: setup.md
ela_forgery/: README.md  analyze.py  docdetect.py  main.py  requirements.txt  visualize.py
frontend/: index.html  package.json
models/: registry.json
tests/: conftest.py
(+101 files in other folders)
